Refactor code formatting: standardize indentation and remove unnecessary blank lines across multiple files