@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -48,25 +49,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
+
         // Allow all origins for development
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        
+        configuration.setAllowedOriginPatterns(List.of("*"));
+
         // Allow all HTTP methods
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        
+
         // Allow all headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        
+        configuration.setAllowedHeaders(List.of("*"));
+
         // Allow credentials
         configuration.setAllowCredentials(true);
-        
+
         // Cache preflight response for 1 hour
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        
+
         return source;
     }
 } 
